--- a/report.qmd
+++ b/report.qmd
@@ -29,9 +29,9 @@ The *Ptilotus calostachyus F.Muell*, which is also known as the
 **Weeping Mulla Mulla**, is an endemic plant that is commonly found in
 the Western Australia territory (Florabase n. d.). This species thrives
 in arid region, particular in sandy habitats with red and stony
-plains(Florabase n. d.). Being a *perennial* plant, it can live up to
+plains (Florabase n. d.). Being a *perennial* plant, it can live up to
 more than two years with the seasonal pattern of being dormant in the
-winter and sprouting again in springtime - (Florabase n. d.). Moreover,
+winter and sprouting again in springtime (Florabase n. d.). Moreover,
 **Weeping Mulla Mulla** displays erect or spreading, herb or shrub
 characteristics, meaning that it can be found as a tall plant and/or
 covering an area, as well as with/without a woody body. They can grow
@@ -41,7 +41,7 @@ none organized sighting campaign of the **Weeping Mulla Mulla** due to
 the outback nature of its habitat and lesser popularity as compared to
 other iconic Australia ecotourism species.
 
-Five expectations when exploring the **Weeping Mulla Mulla** sighting:
+Five expectations when exploring the **Weeping Mulla Mulla** sightings:
 
 -   We expect most of the sightings to occur between March to October.
 
@@ -86,9 +86,8 @@ may lead to gaps in the dataset.
 Below is the code to download the raw data directly from *ALA Atlas of
 Living Australia*.
 
-The basis of record was filtered to `HUMAN_OBSERVATION` only. This
-decision was made because we intended to focus solely on sightings of
-the species in the wild, and differentiate between specimens that were
+The basis of record was filtered to `HUMAN_OBSERVATION` only. The intention of this analysis is to focus solely on sightings of
+the species in the wild, and differentiate between specimens that are
 preserved, collected samples, or in controlled environments such as
 museums.
 
@@ -129,6 +128,8 @@ storage <- galah_call() %>%
   ) %>%
   atlas_occurrences() %>%
   filter(basisOfRecord == "HUMAN_OBSERVATION")
+
+# this workaround is done because the message "Checking queue Current queue size: 1 inqueue ." do not go away even if we use warning or message = false
 ```
 
 ```{r eval=FALSE}
@@ -142,8 +143,6 @@ storage <- galah_call() %>%
   ) %>%
   atlas_occurrences() %>%
   filter(basisOfRecord == "HUMAN_OBSERVATION")
-
-# this workaround is done because the message "Checking queue Current queue size: 1 inqueue ." do not go away even if we use warning or message = false
 ```
 
 The data obtained from the Atlas of Living Australia website combines
